<resources>
    <string name="app_name">TrueHost</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC3SrcUtXXXXXXXXXXXXXXXXXX
    </string>

    <string name="default_notification_channel_id">Default</string>


    <string name="no_connection_label">No internet connections found. Check your connection or try again</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_icon">no internet icon</string>
    <string name="splash_footer_text">Version 1.0.1. Copyright © 2021. All right reserved</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="refresh_duration">
        <item>5 sec</item>
        <item>10 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>10 min</item>
        <item>30 min</item>
    </string-array>
    <string-array name="country">
        <item>Kenya</item>
        <item>Nigeria</item>
        <item>Egypt</item>
        <item>S. Africa</item>
    </string-array>
    <string-array name="countryValue">
        <item>https://www.truehost.co.ke/login</item>
        <item>https://www.truehost.com.ng/login</item>
        <item>https://www.truehost.com/login</item>
        <item>https://www.truehost.co.za/login</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
